# Orcheonix

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  config.py  llm_client.py  logger.py
evaluation/: __init__.py  evaluator.py
examples/: demo_query.md  sample_output.md
orcheonix_agents/: __init__.py  competitor_agent.py  finance_agent.py  research_agent.py  strategy_agent.py
orchestrator/: __init__.py  react_planner.py
tests/: __init__.py  test_agents.py  test_evaluator.py  test_llm_layers.py
